--- a/Esame_davvero/latex/structnode.tex
+++ b/Esame_davvero/latex/structnode.tex
@@ -43,4 +43,4 @@ std\+::ostream \& {\bfseries operator$<$$<$} (std\+::ostream \&os, const \mbox{\
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-node.\+hpp\end{DoxyCompactItemize}
+include/node.\+hpp\end{DoxyCompactItemize}
