--- a/Esame_davvero/latex/classbst.tex
+++ b/Esame_davvero/latex/classbst.tex
@@ -100,4 +100,4 @@ std\+::ostream \& {\bfseries operator$<$$<$} (std\+::ostream \&os, const \mbox{\
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-bst.\+hpp\end{DoxyCompactItemize}
+include/bst.\+hpp\end{DoxyCompactItemize}
