--- a/Esame_davvero/latex/struct__iterator.tex
+++ b/Esame_davvero/latex/struct__iterator.tex
@@ -55,4 +55,4 @@ std\+::ostream \& {\bfseries operator$<$$<$} (std\+::ostream \&os, const \mbox{\
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-iterator.\+hpp\end{DoxyCompactItemize}
+include/iterator.\+hpp\end{DoxyCompactItemize}
