--- a/Esame_davvero/latex/classbst.tex
+++ b/Esame_davvero/latex/classbst.tex
@@ -1,40 +1,37 @@
 \hypertarget{classbst}{}\doxysection{bst$<$ key\+\_\+type, value\+\_\+type, OP $>$ Class Template Reference}
 \label{classbst}\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+
+
+{\ttfamily \#include $<$bst.\+hpp$>$}
+
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{classbst_a6f31521b77882d5b84bea8cc7be14d2b}\label{classbst_a6f31521b77882d5b84bea8cc7be14d2b}} 
-{\bfseries bst} (attr\+\_\+type starting\+\_\+attr) noexcept
+\mbox{\hyperlink{classbst_a1ba2723ef9d9c08073bd2fcb91ad5d52}{bst}} ()=default
 \item 
-\mbox{\Hypertarget{classbst_ab8906a1dacad0796fb1e50a22bf8d728}\label{classbst_ab8906a1dacad0796fb1e50a22bf8d728}} 
-{\bfseries bst} (const \mbox{\hyperlink{classbst}{bst}} \&tree\+\_\+to\+\_\+copy)
+\mbox{\hyperlink{classbst_a16749f7d69c12e6bf94a41a96cdfbcc4}{$\sim$bst}} ()=default
 \item 
-\mbox{\Hypertarget{classbst_a705b03435d0b5ce26fed2d6296cdfd30}\label{classbst_a705b03435d0b5ce26fed2d6296cdfd30}} 
-\mbox{\hyperlink{classbst}{bst}} \& {\bfseries operator=} (const \mbox{\hyperlink{classbst}{bst}} \&tree\+\_\+to\+\_\+copy)
+\mbox{\hyperlink{classbst_a6f31521b77882d5b84bea8cc7be14d2b}{bst}} (attr\+\_\+type starting\+\_\+attr) noexcept
 \item 
-\mbox{\Hypertarget{classbst_a262f7f3c644646495f31b9d960953f9d}\label{classbst_a262f7f3c644646495f31b9d960953f9d}} 
-{\bfseries bst} (\mbox{\hyperlink{classbst}{bst}} \&\&tree\+\_\+to\+\_\+copy)
+\mbox{\hyperlink{classbst_ab8906a1dacad0796fb1e50a22bf8d728}{bst}} (const \mbox{\hyperlink{classbst}{bst}} \&tree\+\_\+to\+\_\+copy)
 \item 
-\mbox{\Hypertarget{classbst_a570acf5ff851245509787b98c6a088e8}\label{classbst_a570acf5ff851245509787b98c6a088e8}} 
-\mbox{\hyperlink{classbst}{bst}} \& {\bfseries operator=} (\mbox{\hyperlink{classbst}{bst}} \&\&tree\+\_\+to\+\_\+copy)
+\mbox{\hyperlink{classbst}{bst}} \& \mbox{\hyperlink{classbst_a705b03435d0b5ce26fed2d6296cdfd30}{operator=}} (const \mbox{\hyperlink{classbst}{bst}} \&tree\+\_\+to\+\_\+copy)
 \item 
-\mbox{\Hypertarget{classbst_a68c4bccff1bbb655aceab7eb4a1bdce6}\label{classbst_a68c4bccff1bbb655aceab7eb4a1bdce6}} 
-\mbox{\hyperlink{struct__iterator}{iterator}} {\bfseries begin} () noexcept
+\mbox{\hyperlink{classbst_a262f7f3c644646495f31b9d960953f9d}{bst}} (\mbox{\hyperlink{classbst}{bst}} \&\&tree\+\_\+to\+\_\+copy)
 \item 
-\mbox{\Hypertarget{classbst_ae46573bbd88ab58ada60918a89547cd4}\label{classbst_ae46573bbd88ab58ada60918a89547cd4}} 
-\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} {\bfseries begin} () const noexcept
+\mbox{\hyperlink{classbst}{bst}} \& \mbox{\hyperlink{classbst_a570acf5ff851245509787b98c6a088e8}{operator=}} (\mbox{\hyperlink{classbst}{bst}} \&\&tree\+\_\+to\+\_\+copy)
 \item 
-\mbox{\Hypertarget{classbst_a2b4fb338300a01aa44b5314bf42a9f7a}\label{classbst_a2b4fb338300a01aa44b5314bf42a9f7a}} 
-\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} {\bfseries cbegin} () const noexcept
+\mbox{\hyperlink{struct__iterator}{iterator}} \mbox{\hyperlink{classbst_a68c4bccff1bbb655aceab7eb4a1bdce6}{begin}} () noexcept
 \item 
-\mbox{\Hypertarget{classbst_af4499987393d029835b0a888808d4857}\label{classbst_af4499987393d029835b0a888808d4857}} 
-\mbox{\hyperlink{struct__iterator}{iterator}} {\bfseries tail} () noexcept
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst_ae46573bbd88ab58ada60918a89547cd4}{begin}} () const noexcept
 \item 
-\mbox{\Hypertarget{classbst_aa543a69847d308ab201590c9e3a7108e}\label{classbst_aa543a69847d308ab201590c9e3a7108e}} 
-\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} {\bfseries tail} () const noexcept
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst_a2b4fb338300a01aa44b5314bf42a9f7a}{cbegin}} () const noexcept
 \item 
-\mbox{\Hypertarget{classbst_a0a181d94256736e8c64d17e5542d2313}\label{classbst_a0a181d94256736e8c64d17e5542d2313}} 
-\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} {\bfseries ctail} () const noexcept
+\mbox{\hyperlink{struct__iterator}{iterator}} \mbox{\hyperlink{classbst_af4499987393d029835b0a888808d4857}{tail}} () noexcept
+\item 
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst_aa543a69847d308ab201590c9e3a7108e}{tail}} () const noexcept
+\item 
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst_a0a181d94256736e8c64d17e5542d2313}{ctail}} () const noexcept
 \item 
 \mbox{\Hypertarget{classbst_aa6ce6fbe3c3fe23fbbe7fb1b15587a61}\label{classbst_aa6ce6fbe3c3fe23fbbe7fb1b15587a61}} 
 \mbox{\hyperlink{struct__iterator}{iterator}} {\bfseries end} () noexcept
@@ -97,6 +94,113 @@ std\+::unique\+\_\+ptr$<$ \mbox{\hyperlink{structnode}{node}}$<$ attr\+\_\+type 
 std\+::ostream \& {\bfseries operator$<$$<$} (std\+::ostream \&os, const \mbox{\hyperlink{classbst}{bst}} \&x) noexcept
 \end{DoxyCompactItemize}
 
+
+\doxysubsection{Detailed Description}
+\subsubsection*{template$<$typename key\+\_\+type, typename value\+\_\+type, typename OP = std\+::less$<$key\+\_\+type$>$$>$\newline
+class bst$<$ key\+\_\+type, value\+\_\+type, O\+P $>$}
+
+Author\+: Rodolfo Tolloi, Giulia Bernardi.
+
+Purpouse\+: create a custom class that represents a binary search tree (bst). This is done by defining a compare operator and a head. The first is the relation that will decide where a new node will insert, while the second is a unique pointer to the first node of the tree.
+
+Date\+: May, 2021. 
+
+\doxysubsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{classbst_a1ba2723ef9d9c08073bd2fcb91ad5d52}\label{classbst_a1ba2723ef9d9c08073bd2fcb91ad5d52}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!bst@{bst}}
+\index{bst@{bst}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{bst()}{bst()}\hspace{0.1cm}{\footnotesize\ttfamily [1/4]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::\mbox{\hyperlink{classbst}{bst}} (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [default]}}
+
+Default constructor \mbox{\Hypertarget{classbst_a16749f7d69c12e6bf94a41a96cdfbcc4}\label{classbst_a16749f7d69c12e6bf94a41a96cdfbcc4}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!````~bst@{$\sim$bst}}
+\index{````~bst@{$\sim$bst}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{$\sim$bst()}{~bst()}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::$\sim$\mbox{\hyperlink{classbst}{bst}} (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [default]}}
+
+Default destructor \mbox{\Hypertarget{classbst_a6f31521b77882d5b84bea8cc7be14d2b}\label{classbst_a6f31521b77882d5b84bea8cc7be14d2b}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!bst@{bst}}
+\index{bst@{bst}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{bst()}{bst()}\hspace{0.1cm}{\footnotesize\ttfamily [2/4]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::\mbox{\hyperlink{classbst}{bst}} (\begin{DoxyParamCaption}\item[{attr\+\_\+type}]{starting\+\_\+attr }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [explicit]}, {\ttfamily [noexcept]}}
+
+Custom constructor, who take a attribute and create a node which will be the first of a bst. \mbox{\Hypertarget{classbst_ab8906a1dacad0796fb1e50a22bf8d728}\label{classbst_ab8906a1dacad0796fb1e50a22bf8d728}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!bst@{bst}}
+\index{bst@{bst}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{bst()}{bst()}\hspace{0.1cm}{\footnotesize\ttfamily [3/4]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::\mbox{\hyperlink{classbst}{bst}} (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$ \&}]{tree\+\_\+to\+\_\+copy }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [explicit]}}
+
+Copy constructor \mbox{\Hypertarget{classbst_a262f7f3c644646495f31b9d960953f9d}\label{classbst_a262f7f3c644646495f31b9d960953f9d}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!bst@{bst}}
+\index{bst@{bst}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{bst()}{bst()}\hspace{0.1cm}{\footnotesize\ttfamily [4/4]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::\mbox{\hyperlink{classbst}{bst}} (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$ \&\&}]{tree\+\_\+to\+\_\+copy }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [explicit]}}
+
+Move constructor 
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{classbst_ae46573bbd88ab58ada60918a89547cd4}\label{classbst_ae46573bbd88ab58ada60918a89547cd4}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!begin@{begin}}
+\index{begin@{begin}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{begin()}{begin()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::begin (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [noexcept]}}
+
+Begin\+: this function will return a const iterator to the leftmost node of the const tree. \mbox{\Hypertarget{classbst_a68c4bccff1bbb655aceab7eb4a1bdce6}\label{classbst_a68c4bccff1bbb655aceab7eb4a1bdce6}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!begin@{begin}}
+\index{begin@{begin}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{begin()}{begin()}\hspace{0.1cm}{\footnotesize\ttfamily [2/2]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{struct__iterator}{iterator}} \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::begin (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [noexcept]}}
+
+Begin\+: this function will return an iterator to the leftmost node of the non-\/const tree. \mbox{\Hypertarget{classbst_a2b4fb338300a01aa44b5314bf42a9f7a}\label{classbst_a2b4fb338300a01aa44b5314bf42a9f7a}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!cbegin@{cbegin}}
+\index{cbegin@{cbegin}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{cbegin()}{cbegin()}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::cbegin (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [noexcept]}}
+
+Cbegin\+: it will always return a const\+\_\+iterator to the leftmost node of the tree. \mbox{\Hypertarget{classbst_a0a181d94256736e8c64d17e5542d2313}\label{classbst_a0a181d94256736e8c64d17e5542d2313}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!ctail@{ctail}}
+\index{ctail@{ctail}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{ctail()}{ctail()}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::ctail (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [noexcept]}}
+
+ctail\+: it will return a const\+\_\+iterator to the rightmost node of the tree, both for const and non-\/const tree. \mbox{\Hypertarget{classbst_a570acf5ff851245509787b98c6a088e8}\label{classbst_a570acf5ff851245509787b98c6a088e8}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!operator=@{operator=}}
+\index{operator=@{operator=}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{operator=()}{operator=()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{classbst}{bst}}\& \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::operator= (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$ \&\&}]{tree\+\_\+to\+\_\+copy }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+
+Move assignement \mbox{\Hypertarget{classbst_a705b03435d0b5ce26fed2d6296cdfd30}\label{classbst_a705b03435d0b5ce26fed2d6296cdfd30}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!operator=@{operator=}}
+\index{operator=@{operator=}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{operator=()}{operator=()}\hspace{0.1cm}{\footnotesize\ttfamily [2/2]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{classbst}{bst}}\& \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::operator= (\begin{DoxyParamCaption}\item[{const \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$ \&}]{tree\+\_\+to\+\_\+copy }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+
+Copy assignement \mbox{\Hypertarget{classbst_aa543a69847d308ab201590c9e3a7108e}\label{classbst_aa543a69847d308ab201590c9e3a7108e}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!tail@{tail}}
+\index{tail@{tail}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{tail()}{tail()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{struct__iterator}{const\+\_\+iterator}} \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::tail (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [noexcept]}}
+
+Tail\+: it will return a const\+\_\+iterator to the rightmost node of the const tree. \mbox{\Hypertarget{classbst_af4499987393d029835b0a888808d4857}\label{classbst_af4499987393d029835b0a888808d4857}} 
+\index{bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}!tail@{tail}}
+\index{tail@{tail}!bst$<$ key\_type, value\_type, OP $>$@{bst$<$ key\_type, value\_type, OP $>$}}
+\doxysubsubsection{\texorpdfstring{tail()}{tail()}\hspace{0.1cm}{\footnotesize\ttfamily [2/2]}}
+{\footnotesize\ttfamily template$<$typename key\+\_\+type , typename value\+\_\+type , typename OP  = std\+::less$<$key\+\_\+type$>$$>$ \\
+\mbox{\hyperlink{struct__iterator}{iterator}} \mbox{\hyperlink{classbst}{bst}}$<$ key\+\_\+type, value\+\_\+type, OP $>$\+::tail (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [noexcept]}}
+
+Tail\+: it will return a iterator to the rightmost node of the non const tree. 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
