--- a/Python-Exam/python_exam.ipynb
+++ b/Python-Exam/python_exam.ipynb
@@ -23,34 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    " d  = {\"a\": [1, 2, 3], \"b\": [45, 6], \"c\": [2, 45]}\n",
-    " d2 = {\"a\" : 1, \"b\" : \"lettera\", \"c\" : [12,43]}\n"
+    " d  = {\"a\": [1, 2, 3], \"b\": [45, 6], \"c\": [2, 45]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "dict_values([[1, 2, 3], [45, 6], [2, 45]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(d.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -59,42 +41,27 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{1: ['a'], 2: ['a', 'c'], 3: ['a'], 45: ['b', 'c'], 6: ['b']}\n"
+      "{1: ['a'], 2: ['a', 'c'], 3: ['a'], 6: ['b'], 45: ['b', 'c']}\n"
      ]
     }
    ],
    "source": [
     "def reverse_dict(d):\n",
+    "    \n",
+    "    #We create a set with all the keys of the reverse dictionary with a set comprehension.\n",
+    "    possible_keys = {w for v in d.values() for w in v}\n",
     "\n",
-    "    possible_values = d.keys()\n",
-    "\n",
-    "    d_values = d.values()\n",
-    "    possible_keys = []\n",
-    "\n",
-    "    for v in d_values :\n",
-    "        for w in v :\n",
-    "            if (possible_keys.count(w)==0) :\n",
-    "                possible_keys.append(w)\n",
-    "    #print(possible_keys)\n",
-    "\n",
-    "    #creiamo le coppie inverse\n",
-    "\n",
-    "    tuple_list = [(ke, []) for ke in possible_keys]\n",
-    "\n",
-    "    for v in possible_values : #possible values sono a b c\n",
-    "        for j,w in enumerate(possible_keys) : #possible key sono 1,2,3,45,6\n",
-    "            if (d[v].count(w)!=0) :\n",
-    "                tuple_list[j][1].append(v)\n",
-    "\n",
-    "    #print(tuple_list)\n",
-    "\n",
+    "    #We create the inverse tuples with a list comprehension.\n",
+    "    tuple_list = [(ke, [v for v in d.keys() if d[v].count(ke)!=0]) for ke in possible_keys]\n",
+    "    \n",
+    "    #We create the reverse dictionary with a dictionary comprehension.\n",
     "    rev_dict = {i[0] : i[1] for i in tuple_list }\n",
+    "    \n",
+    "    #The program could be implemented in just one line as shown in the next line, but we decided to do 3 steps for a better readability.\n",
+    "    #There is also no significant gain in execution time.\n",
+    "    #rev_dict = {i[0] : i[1] for i in [(ke, [v for v in d.keys() if d[v].count(ke)!=0]) for ke in {w for v in d.values() for w in v}] }\n",
     "    return rev_dict\n",
-    "\n",
-    "\n",
-    "#cosa succede se ho una list di list di list ??\n",
-    "#cosa succede se ho elementi singoli e non list di list\n",
-    "\n",
+    "    \n",
     "print(reverse_dict(d))\n",
     "\n",
     "    "
@@ -102,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -111,23 +78,11 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "A0 : [7, 190]\n",
-      "A1 : [63, 58, 36, 189, 27]\n",
-      "A2 : [23, 152, 109, 9, 8, 24, 56, 60, 130]\n",
-      "A3 : [7, 144, 51, 184, 167, 180, 140, 108, 57, 115]\n",
-      "A4 : [72, 2, 195, 41, 179, 109, 88, 72, 40, 56]\n",
-      "A5 : [27, 24, 98, 25, 92, 89]\n",
-      "A6 : [68, 12, 187, 118, 138, 32, 97, 21, 142, 76]\n",
-      "A7 : [93, 148, 50, 181, 18, 12, 170, 59, 198, 75]\n",
-      "A8 : [60, 26]\n",
-      "A9 : [72, 117, 163, 94, 42, 95, 91]\n",
-      "A10 : [172, 69, 180, 175]\n"
+      "['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\nA0 : [7, 190]\nA1 : [63, 58, 36, 189, 27]\nA2 : [23, 152, 109, 9, 8, 24, 56, 60, 130]\nA3 : [7, 144, 51, 184, 167, 180, 140, 108, 57, 115]\nA4 : [72, 2, 195, 41, 179, 109, 88, 72, 40, 56]\nA5 : [27, 24, 98, 25, 92, 89]\nA6 : [68, 12, 187, 118, 138, 32, 97, 21, 142, 76]\nA7 : [93, 148, 50, 181, 18, 12, 170, 59, 198, 75]\nA8 : [60, 26]\nA9 : [72, 117, 163, 94, 42, 95, 91]\nA10 : [172, 69, 180, 175]\n"
      ]
     }
    ],
    "source": [
-    "#Ocho che è mooooooolto lungo\n",
     "chars = \"qwertyuiopasdfghjklzxcvbnm\"\n",
     "chars = sorted(chars.upper() + chars)\n",
     "print(chars)\n",
@@ -148,22 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "rd = reverse_dict(d)\n",
-    "#sorted(rd.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.9.4, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
+      "rootdir: /home/rodolfo/Advanced-Programming/Esame/Python-Exam\n",
+      "plugins: anyio-3.0.1\n",
+      "collected 2 items                                                              \u001b[0m\n",
+      "\n",
+      "test_exam.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                          [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m2 passed\u001b[0m\u001b[32m in 0.18s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest"
+   ]
   }
  ],
  "metadata": {
