--- a/Python-Exam/python_exam.ipynb
+++ b/Python-Exam/python_exam.ipynb
@@ -47,6 +47,7 @@
    ],
    "source": [
     "def reverse_dict(d):\n",
+    "    """This funtion takes as input a dictionary and returns a reverse dictionary."""\n"
     "    \n",
     "    #We create a set with all the keys of the reverse dictionary with a set comprehension.\n",
     "    possible_keys = {w for v in d.values() for w in v}\n",
